test/type_errors/cases/ppx_result_nonstring.ml
let x = [%eta.result 123]
